// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title /> should render different titles First Title 1`] = `
<div>
  <h1
    class="text-3xl sm:text-4xl lg:text-5xl tracking-[0.16em] font-bold"
  >
    First Title
  </h1>
</div>
`;

exports[`<Title /> should render different titles Second Title 1`] = `
<div>
  <h1
    class="text-3xl sm:text-4xl lg:text-5xl tracking-[0.16em] font-bold"
  >
    Second Title
  </h1>
</div>
`;
